bugs fixed overflowin body

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ html, body{
 	margin: 0;
 	padding: 0;
 	font-family: 'Space Mono', monospace;
-	overflow: hidden;
+	overflow-x: hidden;
+	scroll-behavior: smooth;
 }
 
 /*logo or head or title part*/
